--liquibase formated sql

--changeset a.zhuravlev:1
create TABLE dynamic_rule (
   id UUID PRIMARY KEY NOT NULL,
   product_id UUID NOT NULL,
   product_name VARCHAR(255) NOT NULL,
   product_text VARCHAR(2000) NOT NULL
);

--changeset a.zhuravlev:2
CREATE TABLE dynamic_rule_query (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
    rule_id UUID NOT NULL,
    position INT NOT NULL,
    query VARCHAR(64) NOT NULL,
    arguments VARCHAR(2000) NOT NULL,
    negate BOOLEAN NOT NULL
);

--changeset a.zhuravlev:3
ALTER TABLE dynamic_rule_query
ADD CONSTRAINT fk_dynamic_rule_query_rule
FOREIGN KEY (rule_id)
REFERENCES dynamic_rule(id);

-- changeset leannann:dynamic-rule-stat
CREATE TABLE IF NOT EXISTS dynamic_rule_stat (
    rule_id    UUID PRIMARY KEY,
    fire_count BIGINT NOT NULL DEFAULT 0,
    CONSTRAINT fk_dynamic_rule_stat_rule
        FOREIGN KEY (rule_id) REFERENCES dynamic_rule(id) ON DELETE CASCADE
);